--- a/app/src/main/res/layout/permission_item_layout.xml
+++ b/app/src/main/res/layout/permission_item_layout.xml
@@ -8,7 +8,7 @@
         android:id="@+id/per_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="权限"
+        android:text="Permission"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="权限说明"
+        android:text="Permission Description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/per_title"
         app:layout_constraintTop_toBottomOf="@id/per_title"
@@ -36,7 +36,7 @@
         android:enabled="false"
         android:minWidth="0dp"
         android:minHeight="0dp"
-        android:text="自行授权"
+        android:text="Grant Manually"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
