--- a/app/src/main/res/layout/permission_bottom_sheet_fragment_layout.xml
+++ b/app/src/main/res/layout/permission_bottom_sheet_fragment_layout.xml
@@ -15,7 +15,7 @@
             android:id="@+id/per_hit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Permission Request"
+            android:text="Permission required"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -26,9 +26,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:text="Exit"
+            android:text="Quit"
             android:textColor="@color/white" />
     </RelativeLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -42,7 +43,7 @@
             android:id="@+id/per_window_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="1. Overlay Permission"
+            android:text="1. Floating windows"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -56,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Display over other apps, used for full-screen and lock screen display"
+            android:text="Application overlay display, used to detect full-screen mode and display on lock screen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/per_window_title"
             app:layout_constraintTop_toBottomOf="@id/per_window_title"
@@ -69,7 +70,7 @@
             android:layout_height="wrap_content"
             android:minWidth="0dp"
             android:minHeight="0dp"
-            android:text="Grant"
+            android:text="GRANT"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
