--- a/app/src/main/res/layout/permission_item_layout.xml
+++ b/app/src/main/res/layout/permission_item_layout.xml
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="Permission Description"
+        android:text="Permission explanation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/per_title"
         app:layout_constraintTop_toBottomOf="@id/per_title"
@@ -36,7 +36,7 @@
         android:enabled="false"
         android:minWidth="0dp"
         android:minHeight="0dp"
-        android:text="Grant Manually"
+        android:text="SELF-GRANT"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
